src/libs/yuni/nany/tests/valid/regexp.ny
# Test for regular expression syntax
program RegExp;

function name
{
	s := "MyName";
	s
}

function main
{
	if name ~ "" then 0 else 1
}
