src/libs/yuni/nany/tests/invalid/if_missing_expression.ny
program ifMissingExpression;

function main
{
	if true then  else 0;
}
